// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PostsTemplate /> should match snapshot with no posts 1`] = `
.c13 {
  margin-top: 6.4rem;
  padding: 0 3.2rem;
}

.c17 {
  max-width: 120rem;
  width: 100%;
  margin: 0 auto;
  margin-bottom: 6.4rem;
}

.c23 {
  max-width: 120rem;
  width: 100%;
  margin: 0 auto;
}

.c9 {
  color: #000000;
  line-height: 1.2;
  font-size: 2.4rem;
  text-transform: uppercase;
}

.c16 {
  color: #000000;
  line-height: 1.2;
  font-size: 2.4rem;
  text-transform: none;
}

.c6 {
  z-index: 1;
  position: fixed;
  padding: 3.2rem;
  background: #000000;
  height: 100vh;
  width: 100%;
  max-width: 32rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  left: -31rem;
  overflow-y: hidden;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c4 {
  z-index: 2;
  position: fixed;
  color: #FFFFFF;
  background: #000000;
  width: 3rem;
  height: 3rem;
  top: 2.4rem;
  color: #FFFFFF;
  left: 0rem;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c11 {
  margin: auto;
  width: 100%;
}

.c7 .c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0;
  margin-bottom: 4.8rem;
}

.c7 .c8 img {
  border: 0.5rem solid #dc143c;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 > img {
  width: 15rem;
  height: 15rem;
  border-radius: 50%;
}

.c12 {
  display: block;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFFFFF;
  margin-bottom: 1.6rem;
  font-size: 1.8rem;
  border-right: 0.5rem solid #000000;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c12:hover {
  border-right: 0.5rem solid #dc143c;
  color: #dc143c;
}

.c5 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-bottom: 6.4rem;
  width: 100%;
  max-width: 96rem;
  color: #333333;
  margin: 0 auto;
}

.c14 .c8 {
  margin: 0 0 calc(1.6rem - 1rem);
}

.c15 {
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-left: 2.4rem;
  max-width: 44rem;
}

.c27 {
  font-size: 2.4rem;
}

.c27 p {
  margin: 3.2rem 0;
}

.c27 a,
.c27 a:visited,
.c27 a:link {
  color: #dc143c;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.c27 a:hover {
  -webkit-filter: brightness(70%);
  filter: brightness(70%);
}

.c27 img {
  max-width: 100%;
}

.c27 .image {
  background: #DDDDDD;
  line-height: 0;
  margin: 2.4rem 0;
}

.c27 .image figcaption {
  padding: 1.6rem;
  text-align: center;
  font-size: 1.6rem;
  line-height: 1.3;
}

.c27 .image-style-side {
  max-width: 50%;
  float: right;
  margin: 2.4rem 0;
}

.c27 ul,
.c27 ol {
  margin: 2.4rem 4.0rem;
}

.c27 hr {
  border: none;
  border: 0.1rem solid #DDDDDD;
}

.c27 .table {
  width: 100%;
  overflow: hidden;
  overflow-x: auto;
}

.c27 table {
  border-collapse: collapse;
  border: 1px solid #eee;
  border-bottom: 2px solid #00cccc;
  box-shadow: 0px 0px 20px rgba(0,0,0,0.1),0px 10px 20px rgba(0,0,0,0.05),0px 20px 20px rgba(0,0,0,0.05),0px 30px 20px rgba(0,0,0,0.05);
}

.c27 table tr:hover {
  background: #f4f4f4;
}

.c27 table tr:hover td {
  color: #555;
}

.c27 table th,
.c27 table td {
  color: #999;
  border: 1px solid #eee;
  padding: 12px 35px;
  border-collapse: collapse;
}

.c27 table th {
  background: #00cccc;
  color: #fff;
  text-transform: uppercase;
}

.c27 table th.last {
  border-right: none;
}

.c27 blockquote {
  border-left: 0.5rem solid #dc143c;
  color: #AAAAAA;
  -webkit-filter: brightness(80%);
  filter: brightness(80%);
  padding-left: 2.4rem;
  font-style: italic;
  margin: 2.4rem;
}

.c24 {
  text-align: center;
  border-top: 0.1rem solid #DDDDDD;
}

.c24 a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c24 .c26 {
  font-size: 1.6rem;
}

.c25 pre[class*="language-"],
.c25 code[class*="language-"] {
  color: #d4d4d4;
  font-size: 13px;
  text-shadow: none;
  font-family: Menlo,Monaco,Consolas,"Andale Mono","Ubuntu Mono","Courier New",monospace;
  direction: ltr;
  text-align: left;
  white-space: pre;
  word-spacing: normal;
  word-break: normal;
  line-height: 1.5;
  -moz-tab-size: 4;
  -o-tab-size: 4;
  tab-size: 4;
  -webkit-hyphens: none;
  -moz-hyphens: none;
  -ms-hyphens: none;
  -webkit-hyphens: none;
  -moz-hyphens: none;
  -ms-hyphens: none;
  hyphens: none;
}

.c25 pre[class*="language-"]::selection,
.c25 code[class*="language-"]::selection,
.c25 pre[class*="language-"] *::selection,
.c25 code[class*="language-"] *::selection {
  text-shadow: none;
  background: #75a7ca;
}

.c25 pre[class*="language-"] {
  padding: 1em;
  margin: .5em 0;
  overflow: auto;
  background: #1e1e1e;
}

.c25:not(pre) > code[class*="language-"] {
  padding: .1em .3em;
  border-radius: .3em;
  color: #db4c69;
  background: #f9f2f4;
}

.c25 .namespace {
  opacity: .7;
}

.c25 .token.doctype .token.doctype-tag {
  color: #569CD6;
}

.c25 .token.doctype .token.name {
  color: #9cdcfe;
}

.c25 .token.comment,
.c25 .token.prolog {
  color: #6a9955;
}

.c25 .token.punctuation,
.c25 .language-html .language-css .token.punctuation,
.c25 .language-html .language-javascript .token.punctuation {
  color: #d4d4d4;
}

.c25 .token.property,
.c25 .token.tag,
.c25 .token.boolean,
.c25 .token.number,
.c25 .token.constant,
.c25 .token.symbol,
.c25 .token.inserted,
.c25 .token.unit {
  color: #b5cea8;
}

.c25 .token.selector,
.c25 .token.attr-name,
.c25 .token.string,
.c25 .token.char,
.c25 .token.builtin,
.c25 .token.deleted {
  color: #ce9178;
}

.c25 .language-css .token.string.url {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c25 .token.operator,
.c25 .token.entity {
  color: #d4d4d4;
}

.c25 .token.operator.arrow {
  color: #569CD6;
}

.c25 .token.atrule {
  color: #ce9178;
}

.c25 .token.atrule .token.rule {
  color: #c586c0;
}

.c25 .token.atrule .token.url {
  color: #9cdcfe;
}

.c25 .token.atrule .token.url .token.function {
  color: #dcdcaa;
}

.c25 .token.atrule .token.url .token.punctuation {
  color: #d4d4d4;
}

.c25 .token.keyword {
  color: #569CD6;
}

.c25 .token.keyword.module,
.c25 .token.keyword.control-flow {
  color: #c586c0;
}

.c25 .token.function,
.c25 .token.function .token.maybe-class-name {
  color: #dcdcaa;
}

.c25 .token.regex {
  color: #d16969;
}

.c25 .token.important {
  color: #569cd6;
}

.c25 .token.italic {
  font-style: italic;
}

.c25 .token.constant {
  color: #9cdcfe;
}

.c25 .token.class-name,
.c25 .token.maybe-class-name {
  color: #4ec9b0;
}

.c25 .token.console {
  color: #9cdcfe;
}

.c25 .token.parameter {
  color: #9cdcfe;
}

.c25 .token.interpolation {
  color: #9cdcfe;
}

.c25 .token.punctuation.interpolation-punctuation {
  color: #569cd6;
}

.c25 .token.boolean {
  color: #569cd6;
}

.c25 .token.property,
.c25 .token.variable,
.c25 .token.imports .token.maybe-class-name,
.c25 .token.exports .token.maybe-class-name {
  color: #9cdcfe;
}

.c25 .token.selector {
  color: #d7ba7d;
}

.c25 .token.escape {
  color: #d7ba7d;
}

.c25 .token.tag {
  color: #569cd6;
}

.c25 .token.tag .token.punctuation {
  color: #808080;
}

.c25 .token.cdata {
  color: #808080;
}

.c25 .token.attr-name {
  color: #9cdcfe;
}

.c25 .token.attr-value,
.c25 .token.attr-value .token.punctuation {
  color: #ce9178;
}

.c25 .token.attr-value .token.punctuation.attr-equals {
  color: #d4d4d4;
}

.c25 .token.entity {
  color: #569cd6;
}

.c25 .token.namespace {
  color: #4ec9b0;
}

.c25 pre[class*="language-javascript"],
.c25 code[class*="language-javascript"],
.c25 pre[class*="language-jsx"],
.c25 code[class*="language-jsx"],
.c25 pre[class*="language-typescript"],
.c25 code[class*="language-typescript"],
.c25 pre[class*="language-tsx"],
.c25 code[class*="language-tsx"] {
  color: #9cdcfe;
}

.c25 pre[class*="language-css"],
.c25 code[class*="language-css"] {
  color: #ce9178;
}

.c25 pre[class*="language-html"],
.c25 code[class*="language-html"] {
  color: #d4d4d4;
}

.c25 .language-regex .token.anchor {
  color: #dcdcaa;
}

.c25 .language-html .token.punctuation {
  color: #808080;
}

.c25 pre[data-line] {
  position: relative;
}

.c25 pre[class*="language-"] > code[class*="language-"] {
  position: relative;
  z-index: 1;
}

.c25 .line-highlight {
  position: absolute;
  left: 0;
  right: 0;
  padding: inherit 0;
  margin-top: 1em;
  background: #f7ebc6;
  box-shadow: inset 5px 0 0 #f7d87c;
  z-index: 0;
  pointer-events: none;
  line-height: inherit;
  white-space: pre;
}

.c28 {
  position: fixed;
  background: #000000;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 4rem;
  height: 4rem;
  bottom: 2rem;
  right: 2rem;
  z-index: 6;
}

.c0 {
  position: fixed;
  top: 2rem;
  right: 2rem;
  z-index: 2;
}

.c1 {
  position: relative;
  display: inline-block;
  width: 60px;
  height: 34px;
}

.c2 {
  opacity: 0;
  width: 0;
  height: 0;
}

.c2:checked + span {
  background-color: #dc143c;
}

.c2:focus + span {
  box-shadow: 0 0 1px #2196f3;
}

.c2:checked + span:before {
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  transform: translateX(26px);
}

.c3 {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: 0.4s;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.c3:before {
  position: absolute;
  content: '';
  height: 26px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  -webkit-transition: 0.4s;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.c3 {
  border-radius: 34px;
}

.c3:before {
  border-radius: 50%;
}

.c18 {
  width: 100%;
  margin-left: 0.5rem;
}

.c21 {
  padding: 3.2rem;
  text-align: center;
  font-size: 1.6rem;
}

.c22 {
  margin: 0 auto;
  max-width: 120rem;
  display: grid;
  grid-template-columns: repeat(auto-fill,minmax(280px,1fr));
  gap: 3.2rem;
  padding: 2.4rem;
}

.c19 {
  margin-left: calc(3.2rem - 0.2rem);
}

.c19 > svg {
  width: 2.4rem;
  margin-left: 1rem;
}

.c20 {
  width: 25rem;
  border: 0;
  border-bottom: 2px solid #000000;
  outline: none;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  box-sizing: border-box;
  padding: 0.3rem 0.7rem;
  font-size: 1.6rem;
}

@media (max-width:768px) {
  .c6 {
    left: -32rem;
  }
}

@media (max-width:360px) {
  .c14 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-flow: column wrap;
    -ms-flex-flow: column wrap;
    flex-flow: column wrap;
  }

  .c14 > .c8 {
    margin: 0 0 2.4rem 0;
  }
}

@media (max-width:360px) {
  .c15 {
    margin-left: 0;
  }
}

@media (max-width:768px) {
  .c27 {
    font-size: 2rem;
  }

  .c27 .image-style-side {
    max-width: 100%;
    float: none;
    margin: 0;
  }
}

@media print {
  .c25 pre[class*="language-"],
  .c25 code[class*="language-"] {
    text-shadow: none;
  }
}

@media (max-width:768px) {
  .c18 {
    margin-left: 0;
  }
}

@media (max-width:360px) {
  .c22 {
    grid-template-columns: 1fr;
    padding: 1.6rem;
  }
}

<div
  class="styles__Container-sc-550pzn-0"
>
  <div
    class="c0"
  >
    <label
      class="c1"
    >
      <input
        class="c2"
        type="checkbox"
        value="Dark mode active"
      />
      <span
        class="c3"
      />
    </label>
  </div>
  <a
    aria-label="Open or close menu"
    class="c4"
    href="#"
    title="Open or close menu"
  >
    <svg
      aria-hidden="true"
      aria-label="Open menu"
      class="c5"
      fill="currentColor"
      focusable="false"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
      />
    </svg>
  </a>
  <div
    aria-hidden="true"
    class="c6"
  >
    <div
      class="c7"
    >
      <h1
        class="c8 c9"
      >
        <a
          class="c10"
          href="/"
          target="_self"
        >
          <img
            alt="Bloguinho"
            src="https://res.cloudinary.com/djve6xgfe/image/upload/v1627833918/na_14eb8ec6d4.jpg"
          />
        </a>
      </h1>
    </div>
    <nav
      class="c11"
    >
      <a
        class="c12"
        href="link1"
        target="_self"
      >
        text1
      </a>
      <a
        class="c12"
        href="link2"
        target="_self"
      >
        link2
      </a>
    </nav>
  </div>
  <div
    class="c13"
  >
    <header
      class="c14"
    >
      <h1
        class="c8 c9"
      >
        <a
          class="c10"
          href="/"
          target="_self"
        >
          <img
            alt="Bloguinho - am tincidunt ipsum et imperdiet tincidunt. Fusce eget elementum mi. Nulla pharetra aliquet turpis sit amet elementum. In placerat enim ut nequ"
            src="https://res.cloudinary.com/djve6xgfe/image/upload/v1627833918/na_14eb8ec6d4.jpg"
          />
        </a>
      </h1>
      <div
        class="c15"
      >
        <h2
          class="c8 c16"
        >
          Bloguinho
        </h2>
        <p>
          am tincidunt ipsum et imperdiet tincidunt. Fusce eget elementum mi. Nulla pharetra aliquet turpis sit amet elementum. In placerat enim ut nequ
        </p>
      </div>
    </header>
  </div>
  <div
    class="c17"
  >
    <div
      class="c18"
    >
      <div
        class="c19"
      >
        <input
          class="c20"
          name="q"
          placeholder="Pesquise"
          type="search"
          value=""
        />
        <svg
          aria-hidden="true"
          aria-label="Input enabled"
          class="c5"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm4.59-12.42L10 14.17l-2.59-2.58L6 13l4 4 8-8z"
          />
        </svg>
      </div>
      <p
        class="c21"
      >
        Nenhum post encontrado aqui
      </p>
      <div
        class="c22"
      />
    </div>
    0
  </div>
  <div
    class="c23"
  >
    <footer
      class="c24"
    >
      <div
        class="c25"
      >
        <div
          class="c26 c27"
        >
          <p>
            Feito com carinho, ph
          </p>
        </div>
        ;
      </div>
    </footer>
  </div>
  <a
    aria-label="Go to top"
    class="c28"
    href="#"
    title="Go to top"
  >
    <svg
      aria-hidden="true"
      class="c5"
      fill="currentColor"
      focusable="false"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6 1.41 1.41z"
      />
    </svg>
  </a>
</div>
`;

exports[`<PostsTemplate /> should match snapshot with posts 1`] = `
.c13 {
  margin-top: 6.4rem;
  padding: 0 3.2rem;
}

.c17 {
  max-width: 120rem;
  width: 100%;
  margin: 0 auto;
  margin-bottom: 6.4rem;
}

.c26 {
  max-width: 120rem;
  width: 100%;
  margin: 0 auto;
}

.c9 {
  color: #000000;
  line-height: 1.2;
  font-size: 2.4rem;
  text-transform: uppercase;
}

.c16 {
  color: #000000;
  line-height: 1.2;
  font-size: 2.4rem;
  text-transform: none;
}

.c6 {
  z-index: 1;
  position: fixed;
  padding: 3.2rem;
  background: #000000;
  height: 100vh;
  width: 100%;
  max-width: 32rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 0;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  left: -31rem;
  overflow-y: hidden;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c4 {
  z-index: 2;
  position: fixed;
  color: #FFFFFF;
  background: #000000;
  width: 3rem;
  height: 3rem;
  top: 2.4rem;
  color: #FFFFFF;
  left: 0rem;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c11 {
  margin: auto;
  width: 100%;
}

.c7 .c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0;
  margin-bottom: 4.8rem;
}

.c7 .c8 img {
  border: 0.5rem solid #dc143c;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 > img {
  width: 15rem;
  height: 15rem;
  border-radius: 50%;
}

.c12 {
  display: block;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFFFFF;
  margin-bottom: 1.6rem;
  font-size: 1.8rem;
  border-right: 0.5rem solid #000000;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c12:hover {
  border-right: 0.5rem solid #dc143c;
  color: #dc143c;
}

.c5 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding-bottom: 6.4rem;
  width: 100%;
  max-width: 96rem;
  color: #333333;
  margin: 0 auto;
}

.c14 .c8 {
  margin: 0 0 calc(1.6rem - 1rem);
}

.c15 {
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  margin-left: 2.4rem;
  max-width: 44rem;
}

.c30 {
  font-size: 2.4rem;
}

.c30 p {
  margin: 3.2rem 0;
}

.c30 a,
.c30 a:visited,
.c30 a:link {
  color: #dc143c;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.c30 a:hover {
  -webkit-filter: brightness(70%);
  filter: brightness(70%);
}

.c30 img {
  max-width: 100%;
}

.c30 .image {
  background: #DDDDDD;
  line-height: 0;
  margin: 2.4rem 0;
}

.c30 .image figcaption {
  padding: 1.6rem;
  text-align: center;
  font-size: 1.6rem;
  line-height: 1.3;
}

.c30 .image-style-side {
  max-width: 50%;
  float: right;
  margin: 2.4rem 0;
}

.c30 ul,
.c30 ol {
  margin: 2.4rem 4.0rem;
}

.c30 hr {
  border: none;
  border: 0.1rem solid #DDDDDD;
}

.c30 .table {
  width: 100%;
  overflow: hidden;
  overflow-x: auto;
}

.c30 table {
  border-collapse: collapse;
  border: 1px solid #eee;
  border-bottom: 2px solid #00cccc;
  box-shadow: 0px 0px 20px rgba(0,0,0,0.1),0px 10px 20px rgba(0,0,0,0.05),0px 20px 20px rgba(0,0,0,0.05),0px 30px 20px rgba(0,0,0,0.05);
}

.c30 table tr:hover {
  background: #f4f4f4;
}

.c30 table tr:hover td {
  color: #555;
}

.c30 table th,
.c30 table td {
  color: #999;
  border: 1px solid #eee;
  padding: 12px 35px;
  border-collapse: collapse;
}

.c30 table th {
  background: #00cccc;
  color: #fff;
  text-transform: uppercase;
}

.c30 table th.last {
  border-right: none;
}

.c30 blockquote {
  border-left: 0.5rem solid #dc143c;
  color: #AAAAAA;
  -webkit-filter: brightness(80%);
  filter: brightness(80%);
  padding-left: 2.4rem;
  font-style: italic;
  margin: 2.4rem;
}

.c27 {
  text-align: center;
  border-top: 0.1rem solid #DDDDDD;
}

.c27 a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c27 .c29 {
  font-size: 1.6rem;
}

.c28 pre[class*="language-"],
.c28 code[class*="language-"] {
  color: #d4d4d4;
  font-size: 13px;
  text-shadow: none;
  font-family: Menlo,Monaco,Consolas,"Andale Mono","Ubuntu Mono","Courier New",monospace;
  direction: ltr;
  text-align: left;
  white-space: pre;
  word-spacing: normal;
  word-break: normal;
  line-height: 1.5;
  -moz-tab-size: 4;
  -o-tab-size: 4;
  tab-size: 4;
  -webkit-hyphens: none;
  -moz-hyphens: none;
  -ms-hyphens: none;
  -webkit-hyphens: none;
  -moz-hyphens: none;
  -ms-hyphens: none;
  hyphens: none;
}

.c28 pre[class*="language-"]::selection,
.c28 code[class*="language-"]::selection,
.c28 pre[class*="language-"] *::selection,
.c28 code[class*="language-"] *::selection {
  text-shadow: none;
  background: #75a7ca;
}

.c28 pre[class*="language-"] {
  padding: 1em;
  margin: .5em 0;
  overflow: auto;
  background: #1e1e1e;
}

.c28:not(pre) > code[class*="language-"] {
  padding: .1em .3em;
  border-radius: .3em;
  color: #db4c69;
  background: #f9f2f4;
}

.c28 .namespace {
  opacity: .7;
}

.c28 .token.doctype .token.doctype-tag {
  color: #569CD6;
}

.c28 .token.doctype .token.name {
  color: #9cdcfe;
}

.c28 .token.comment,
.c28 .token.prolog {
  color: #6a9955;
}

.c28 .token.punctuation,
.c28 .language-html .language-css .token.punctuation,
.c28 .language-html .language-javascript .token.punctuation {
  color: #d4d4d4;
}

.c28 .token.property,
.c28 .token.tag,
.c28 .token.boolean,
.c28 .token.number,
.c28 .token.constant,
.c28 .token.symbol,
.c28 .token.inserted,
.c28 .token.unit {
  color: #b5cea8;
}

.c28 .token.selector,
.c28 .token.attr-name,
.c28 .token.string,
.c28 .token.char,
.c28 .token.builtin,
.c28 .token.deleted {
  color: #ce9178;
}

.c28 .language-css .token.string.url {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c28 .token.operator,
.c28 .token.entity {
  color: #d4d4d4;
}

.c28 .token.operator.arrow {
  color: #569CD6;
}

.c28 .token.atrule {
  color: #ce9178;
}

.c28 .token.atrule .token.rule {
  color: #c586c0;
}

.c28 .token.atrule .token.url {
  color: #9cdcfe;
}

.c28 .token.atrule .token.url .token.function {
  color: #dcdcaa;
}

.c28 .token.atrule .token.url .token.punctuation {
  color: #d4d4d4;
}

.c28 .token.keyword {
  color: #569CD6;
}

.c28 .token.keyword.module,
.c28 .token.keyword.control-flow {
  color: #c586c0;
}

.c28 .token.function,
.c28 .token.function .token.maybe-class-name {
  color: #dcdcaa;
}

.c28 .token.regex {
  color: #d16969;
}

.c28 .token.important {
  color: #569cd6;
}

.c28 .token.italic {
  font-style: italic;
}

.c28 .token.constant {
  color: #9cdcfe;
}

.c28 .token.class-name,
.c28 .token.maybe-class-name {
  color: #4ec9b0;
}

.c28 .token.console {
  color: #9cdcfe;
}

.c28 .token.parameter {
  color: #9cdcfe;
}

.c28 .token.interpolation {
  color: #9cdcfe;
}

.c28 .token.punctuation.interpolation-punctuation {
  color: #569cd6;
}

.c28 .token.boolean {
  color: #569cd6;
}

.c28 .token.property,
.c28 .token.variable,
.c28 .token.imports .token.maybe-class-name,
.c28 .token.exports .token.maybe-class-name {
  color: #9cdcfe;
}

.c28 .token.selector {
  color: #d7ba7d;
}

.c28 .token.escape {
  color: #d7ba7d;
}

.c28 .token.tag {
  color: #569cd6;
}

.c28 .token.tag .token.punctuation {
  color: #808080;
}

.c28 .token.cdata {
  color: #808080;
}

.c28 .token.attr-name {
  color: #9cdcfe;
}

.c28 .token.attr-value,
.c28 .token.attr-value .token.punctuation {
  color: #ce9178;
}

.c28 .token.attr-value .token.punctuation.attr-equals {
  color: #d4d4d4;
}

.c28 .token.entity {
  color: #569cd6;
}

.c28 .token.namespace {
  color: #4ec9b0;
}

.c28 pre[class*="language-javascript"],
.c28 code[class*="language-javascript"],
.c28 pre[class*="language-jsx"],
.c28 code[class*="language-jsx"],
.c28 pre[class*="language-typescript"],
.c28 code[class*="language-typescript"],
.c28 pre[class*="language-tsx"],
.c28 code[class*="language-tsx"] {
  color: #9cdcfe;
}

.c28 pre[class*="language-css"],
.c28 code[class*="language-css"] {
  color: #ce9178;
}

.c28 pre[class*="language-html"],
.c28 code[class*="language-html"] {
  color: #d4d4d4;
}

.c28 .language-regex .token.anchor {
  color: #dcdcaa;
}

.c28 .language-html .token.punctuation {
  color: #808080;
}

.c28 pre[data-line] {
  position: relative;
}

.c28 pre[class*="language-"] > code[class*="language-"] {
  position: relative;
  z-index: 1;
}

.c28 .line-highlight {
  position: absolute;
  left: 0;
  right: 0;
  padding: inherit 0;
  margin-top: 1em;
  background: #f7ebc6;
  box-shadow: inset 5px 0 0 #f7d87c;
  z-index: 0;
  pointer-events: none;
  line-height: inherit;
  white-space: pre;
}

.c31 {
  position: fixed;
  background: #000000;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 4rem;
  height: 4rem;
  bottom: 2rem;
  right: 2rem;
  z-index: 6;
}

.c0 {
  position: fixed;
  top: 2rem;
  right: 2rem;
  z-index: 2;
}

.c1 {
  position: relative;
  display: inline-block;
  width: 60px;
  height: 34px;
}

.c2 {
  opacity: 0;
  width: 0;
  height: 0;
}

.c2:checked + span {
  background-color: #dc143c;
}

.c2:focus + span {
  box-shadow: 0 0 1px #2196f3;
}

.c2:checked + span:before {
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  transform: translateX(26px);
}

.c3 {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: 0.4s;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.c3:before {
  position: absolute;
  content: '';
  height: 26px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  -webkit-transition: 0.4s;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.c3 {
  border-radius: 34px;
}

.c3:before {
  border-radius: 50%;
}

.c18 {
  width: 100%;
  margin-left: 0.5rem;
}

.c21 {
  margin: 0 auto;
  max-width: 120rem;
  display: grid;
  grid-template-columns: repeat(auto-fill,minmax(280px,1fr));
  gap: 3.2rem;
  padding: 2.4rem;
}

.c19 {
  margin-left: calc(3.2rem - 0.2rem);
}

.c19 > svg {
  width: 2.4rem;
  margin-left: 1rem;
}

.c20 {
  width: 25rem;
  border: 0;
  border-bottom: 2px solid #000000;
  outline: none;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  box-sizing: border-box;
  padding: 0.3rem 0.7rem;
  font-size: 1.6rem;
}

.c22 .c8 {
  margin: 0;
  margin-top: calc(1.6rem - 0.6rem);
  margin-bottom: 1.6rem;
}

.c22 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c22:hover a {
  color: #dc143c;
  -webkit-filter: brightness(70%);
  filter: brightness(70%);
}

.c22:hover img {
  -webkit-filter: blur(1px) brightness(100%);
  filter: blur(1px) brightness(100%);
}

.c23 {
  max-width: 100%;
  -webkit-transition: opacity 300ms ease-in-out;
  transition: opacity 300ms ease-in-out;
}

.c25 {
  font-size: 1.6rem;
  padding: 0.8rem 1.6rem;
  border-radius: 0.8rem;
  border: none;
  background: #000000;
  color: #FFFFFF;
  cursor: pointer;
}

.c25:active {
  -webkit-transform: translateY(-1px);
  -ms-transform: translateY(-1px);
  transform: translateY(-1px);
  box-shadow: 0 5px 10px rgba(0,0,0,0.2);
}

.c25:disabled {
  background: #333333;
  color: #FFFFFF;
}

.c24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media (max-width:768px) {
  .c6 {
    left: -32rem;
  }
}

@media (max-width:360px) {
  .c14 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-flow: column wrap;
    -ms-flex-flow: column wrap;
    flex-flow: column wrap;
  }

  .c14 > .c8 {
    margin: 0 0 2.4rem 0;
  }
}

@media (max-width:360px) {
  .c15 {
    margin-left: 0;
  }
}

@media (max-width:768px) {
  .c30 {
    font-size: 2rem;
  }

  .c30 .image-style-side {
    max-width: 100%;
    float: none;
    margin: 0;
  }
}

@media print {
  .c28 pre[class*="language-"],
  .c28 code[class*="language-"] {
    text-shadow: none;
  }
}

@media (max-width:768px) {
  .c18 {
    margin-left: 0;
  }
}

@media (max-width:360px) {
  .c21 {
    grid-template-columns: 1fr;
    padding: 1.6rem;
  }
}

<div
  class="styles__Container-sc-550pzn-0"
>
  <div
    class="c0"
  >
    <label
      class="c1"
    >
      <input
        class="c2"
        type="checkbox"
        value="Dark mode active"
      />
      <span
        class="c3"
      />
    </label>
  </div>
  <a
    aria-label="Open or close menu"
    class="c4"
    href="#"
    title="Open or close menu"
  >
    <svg
      aria-hidden="true"
      aria-label="Open menu"
      class="c5"
      fill="currentColor"
      focusable="false"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
      />
    </svg>
  </a>
  <div
    aria-hidden="true"
    class="c6"
  >
    <div
      class="c7"
    >
      <h1
        class="c8 c9"
      >
        <a
          class="c10"
          href="/"
          target="_self"
        >
          <img
            alt="Bloguinho"
            src="https://res.cloudinary.com/djve6xgfe/image/upload/v1627833918/na_14eb8ec6d4.jpg"
          />
        </a>
      </h1>
    </div>
    <nav
      class="c11"
    >
      <a
        class="c12"
        href="link1"
        target="_self"
      >
        text1
      </a>
      <a
        class="c12"
        href="link2"
        target="_self"
      >
        link2
      </a>
    </nav>
  </div>
  <div
    class="c13"
  >
    <header
      class="c14"
    >
      <h1
        class="c8 c9"
      >
        <a
          class="c10"
          href="/"
          target="_self"
        >
          <img
            alt="Bloguinho - am tincidunt ipsum et imperdiet tincidunt. Fusce eget elementum mi. Nulla pharetra aliquet turpis sit amet elementum. In placerat enim ut nequ"
            src="https://res.cloudinary.com/djve6xgfe/image/upload/v1627833918/na_14eb8ec6d4.jpg"
          />
        </a>
      </h1>
      <div
        class="c15"
      >
        <h2
          class="c8 c16"
        >
          Bloguinho
        </h2>
        <p>
          am tincidunt ipsum et imperdiet tincidunt. Fusce eget elementum mi. Nulla pharetra aliquet turpis sit amet elementum. In placerat enim ut nequ
        </p>
      </div>
    </header>
  </div>
  <div
    class="c17"
  >
    <div
      class="c18"
    >
      <div
        class="c19"
      >
        <input
          class="c20"
          name="q"
          placeholder="Pesquise"
          type="search"
          value=""
        />
        <svg
          aria-hidden="true"
          aria-label="Input enabled"
          class="c5"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm4.59-12.42L10 14.17l-2.59-2.58L6 13l4 4 8-8z"
          />
        </svg>
      </div>
      <div
        class="c21"
      >
        <div
          class="c22"
        >
          <a
            href="/post/qualquer-coisa"
          >
            <img
              alt="Qualquer Coisa"
              class="c23"
              src="https://res.cloudinary.com/djve6xgfe/image/upload/v1627833918/na_14eb8ec6d4.jpg"
            />
          </a>
          <h2
            class="c8 c16"
          >
            <a
              href="/post/qualquer-coisa"
            >
              Qualquer Coisa
            </a>
          </h2>
          <p
            class="styles__Excerpt-sc-1seqxjg-2"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla non pharetra est, a egestas tellus. Quisque lorem ipsum, lobortis quis ex posuere, ornare placerat tortor. Nulla ultrices eu tortor quis tincidunt.
          </p>
        </div>
        <div
          class="c22"
        >
          <a
            href="/post/salve"
          >
            <img
              alt="Salve"
              class="c23"
              src="https://res.cloudinary.com/djve6xgfe/image/upload/v1627833918/na_14eb8ec6d4.jpg"
            />
          </a>
          <h2
            class="c8 c16"
          >
            <a
              href="/post/salve"
            >
              Salve
            </a>
          </h2>
          <p
            class="styles__Excerpt-sc-1seqxjg-2"
          >
            bi tristique senectus et netus et malesuada fames ac turpis egestas. Proin iaculis turpis sit amet diam vulputate, eget dictum arcu lobortis. Nulla ac susci
          </p>
        </div>
      </div>
    </div>
    <div
      class="c24"
    >
      <button
        class="c25"
      >
        Carregar mais posts
      </button>
    </div>
  </div>
  <div
    class="c26"
  >
    <footer
      class="c27"
    >
      <div
        class="c28"
      >
        <div
          class="c29 c30"
        >
          <p>
            Feito com carinho, ph
          </p>
        </div>
        ;
      </div>
    </footer>
  </div>
  <a
    aria-label="Go to top"
    class="c31"
    href="#"
    title="Go to top"
  >
    <svg
      aria-hidden="true"
      class="c5"
      fill="currentColor"
      focusable="false"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6 1.41 1.41z"
      />
    </svg>
  </a>
</div>
`;
